force-app/main/default/objects/AssetTransfer__c/AssetTransfer__c.object-meta.xml
<CustomObject>
    <label>Asset Transfer</label>
    <nameField>
        <displayFormat>AT-{000000}</displayFormat>
        <label>ASSET TRANSFER ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Transfer</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>