force-app/main/default/objects/AssetTransfer__c/fields/AssetTransferName__c.field-meta.xml
<CustomField>
    <fullName>AssetTransferName__c</fullName>
    <label>ASSET TRANSFER NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>