force-app/main/default/objects/AssetTransfer__c/fields/CreditAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>CreditAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CREDIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipLabel>ASSET TRANSFER (CREDIT ACCOUNTING CODE)</relationshipLabel>
    <relationshipName>CreditAccountingCode</relationshipName>
    <type>Lookup</type>
</CustomField>