force-app/main/default/objects/AssetTransfer__c/fields/PICOfReceivingCompany__c.field-meta.xml
<CustomField>
    <fullName>PICOfReceivingCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.I.C of RECEIVING COMPANY</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ASSET TRANSFER</relationshipLabel>
    <relationshipName>PICReceivingCompany</relationshipName>
    <type>Lookup</type>
</CustomField>