force-app/main/default/objects/AssetTransfer__c/fields/ReceivingCompanyName__c.field-meta.xml
<CustomField>
    <fullName>ReceivingCompanyName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RECEIVING COMPANY NAME</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ASSET RECEIVER</relationshipLabel>
    <relationshipName>AssetTransfer</relationshipName>
    <type>Lookup</type>
</CustomField>