force-app/main/default/objects/AssetTransfer__c/fields/TransferDate__c.field-meta.xml
<CustomField>
    <fullName>TransferDate__c</fullName>
    <label>TRANSFER DATE</label>
    <type>Date</type>
</CustomField>