force-app/main/default/objects/AssetTransfer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AssetTransferName__c</columns>
    <columns>AssetID__c</columns>
    <columns>ReceivingCompanyName__c</columns>
    <columns>TransferType__c</columns>
    <columns>TransferDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>